# libvgaterm-staging

./: .gitignore  AUTHORS  COPYING  Makefile.am  NEWS  README  README.md  configure.ac  libvgaterm-1.0.pc.in  libvgaterm.spec.in
python/: Makefile.am  pyvgaterm.pc.in  vgaterm-demo.py  vgaterm.defs  vgaterm.override  vgatermmodule.c
vgaterm/: Makefile.am  cbuf.c  cbuf.h  def_font.h  def_palette.h  emulation.c  emulation.h  scrollbuf.c  scrollbuf.h  terminal.c  terminal.h  ui_callbacks.c  ui_callbacks.h  vgafont-demo.c  vgafont.c  vgafont.h  vgapalette.c  vgapalette.h  vgaterm-demo.c  vgaterm.c  vgaterm.def  vgaterm.h  vgatext.c  vgatext.h
